<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"/>


    <TextView
        android:id="@+id/tv_ingles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_portugues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ola_mundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingles" />

    <TextView
        android:id="@+id/tv_espanhol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hola_mundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_portugues" />

    <TextView
        android:id="@+id/tv_frances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salut_tout_le_monde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_espanhol" />


</androidx.constraintlayout.widget.ConstraintLayout>